--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -36,6 +36,7 @@
                         android:src="@drawable/ic_menu_foreground" />
 
                     <ImageView
+                        android:id="@+id/img_options"
                         android:contentDescription="@string/todo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
