--- a/app/src/main/res/layout/help_fragment.xml
+++ b/app/src/main/res/layout/help_fragment.xml
@@ -19,9 +19,10 @@
             android:layout_height="match_parent">
 
             <TextView
+
                 android:textColor="@color/white"
                 android:layout_centerVertical="true"
-                android:visibility="visible"
+                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/_20ssp"
