--- a/app/src/main/res/layout/statistics_fragment.xml
+++ b/app/src/main/res/layout/statistics_fragment.xml
@@ -124,7 +124,7 @@
                             android:layout_marginTop="5dp"
                             android:layout_marginEnd="20dp"
                             android:layout_marginBottom="10dp"
-                            app:cardBackgroundColor="@color/colorPrimary"
+                            app:cardBackgroundColor="@color/white"
                             app:cardCornerRadius="@dimen/_8sdp"
                             app:cardElevation="@dimen/_8sdp">
 
@@ -140,6 +140,7 @@
                                     android:layout_marginBottom="@dimen/_10sdp" />
 
                                 <ProgressBar
+                                    android:id="@+id/progress"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_centerInParent="true"
